# rjt

./: README.md  config.toml  deploy  index.html  index.xml  rjt.cabal  sitemap.xml
content/: testimonials.json
content/blank/: index.md
content/testimonials/: index.md
content/videos/: index.md
css/: bootstrap.min.css  custom.css  freelancer.css
data/: testimonials.yaml  videos.yaml
data/testimonials/: fried_gold.yaml  julie_paquette.yaml  simon.yaml  tina.yaml
data/videos/: vril.yaml
home/: config.json
layouts/_default/: single.html
layouts/testimonials/: single.html
layouts/videos/: single.html
public/: index.html  index.xml
public/css/: bootstrap.min.css  custom.css  freelancer.css
public/js/: jquery-1.11.js
rjt/: README.md  dev.db  rjt.cabal  stack.yaml
rjt/src/: About.hs  Config.hs  Contact.hs  Content.hs  Database.hs  Footer.hs  Internal.hs  Main.hs  Model.hs  Nav.hs  Templates.hs  Testimonials.hs  Types.hs  Videos.hs  about.hamlet  body.hamlet  config.json  contact.hamlet  default.hamlet  footer.hamlet  head.hamlet  nav.hamlet  packages.md  test.hamlet  testimonials.hamlet  videos.hamlet  videos.md
rjt/src/Controllers/: Admin.hs  Homepage.hs  Static.hs
rjt/src/Models/: User.hs
rjt/src/Views/: Layout.hs  admin.hamlet  layout.hamlet
rjt/src/Views/Admin/EditContent/: EditContent.hs  index.hamlet
rjt/src/Views/Admin/Users/: Users.hs  index.hamlet  single.hamlet
rjt/src/Views/Pages/Home/: About.hs  Contact.hs  Home.hs  about.hamlet  body.hamlet  contact.hamlet
rjt/src/Views/Pages/Testimonials/: Testimonials.hs  testimonials.hamlet
rjt/src/Views/Pages/Videos/: Videos.hs  videos.hamlet
rjt/src/Views/Partials/: Footer.hs  Header.hs  Nav.hs  head.hamlet  header.hamlet  nav.hamlet
rjt/src/css/: custom.css  freelancer.css
rjt/src/js/: admin.js  freelancer.js  jquery-ui.min.js
rjt/src/static/css/: bootstrap.min.css  freelancer.css
rjt/src/static/js/: admin.js
src/: Content.hs  Internal.hs  Main.hs
src/Controllers/: Homepage.hs  Packages.hs  Testimonials.hs  Videos.hs
src/Views/: Layout.hs  layout.hamlet  single.hamlet
src/Views/Admin/EditContent/: index.hamlet
src/Views/Partials/: Footer.hs  Head.hs
static/admin/: config.yml
static/css/: custom.css
static/fonts/: proximanova-bold-webfont.eot
themes/hugo-freelancer-theme/layouts/: index.html
(+23 files in other folders)
