name:                rjt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rjt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rjt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Views.Layout
                     , Views.Admin.Users.Users
                     , Views.Admin.EditContent.EditContent
                     , Views.Partials.Header
                     , Views.Partials.Head
                     , Views.Partials.Nav
                     , Views.Partials.Footer
                     , Views.Pages.Home.About
                     , Views.Pages.Home.Home
                     , Views.Pages.Home.Contact
                     , Views.Pages.Testimonials.Testimonials
                     , Views.Pages.Videos.Videos
                     , Views.Pages.Packages.Packages
                     , Controllers.Homepage
                     , Controllers.Admin
                     , Controllers.Testimonials
                     , Controllers.Packages
                     , Types
                     , Content
                     , Database
                     , Internal
                     , Models.User
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , blaze-html
                     , shakespeare
                     , text
                     , filepath
                     , markdown
                     , aeson
                     , bytestring
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , transformers
                     , mtl
                     , resource-pool
                     , wai-extra
                     , wai
                     , monad-logger
                     , time-units
                     , json-state
                     , stm
                     , wai-middleware-static
